# emailgist

./: .gitignore  LICENSE  pyproject.toml
backend/: main.py  requirements.txt  setup.sh
backend/training/: IMPLEMENTATION_SUMMARY.md  README.md  bart_trainer.py  data_prep.py  evaluation.py  setup_training.py  spacy_trainer.py  train_models.py
backend/utils/: preprocessing.py
docs/: README.md
frontend/: index.html  package.json  tailwind.config.js
frontend/emailgist-frontend/: package.json  tailwind.config.js
frontend/emailgist-frontend/src/: App.jsx
frontend/src/: App.js  App.jsx  index.js  main.jsx
