[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emailgist"
version = "1.0.0"
description = "AI-powered email summarization and highlighting service"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "docs/README.md"
license = { text = "MIT" }
requires-python = ">=3.11, <3.12"
keywords = ["email", "ai", "summarization", "nlp", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Email",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "transformers==4.35.2",
    "torch==2.1.1",
    "spacy==3.7.2",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pytest==7.4.3",
    "httpx==0.25.2",
]

[project.scripts]
emailgist-server = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# You can add linters, formatters, and test configs below if you want